fix note list header alignment

--- a/webservice/static/style.css
+++ b/webservice/static/style.css
@@ -153,6 +153,7 @@ form.auth-form>label {
     grid-column: span 4;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    padding: 0.5rem;
 }
 
 .note-list {
